--- a/PowerShellTools/packages.config
+++ b/PowerShellTools/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.VSSDK.BuildTools" version="15.0.26201" targetFramework="net46" developmentDependency="true" />
   <package id="Microsoft.VSSDK.Vsixsigntool" version="15.0.26105-RC3" targetFramework="net45" />
 </packages>
