--- a/PowerShellTools/packages.config
+++ b/PowerShellTools/packages.config
@@ -2,4 +2,6 @@
 <packages>
   <package id="Microsoft.VSSDK.BuildTools" version="15.0.26201" targetFramework="net46" developmentDependency="true" />
   <package id="Microsoft.VSSDK.Vsixsigntool" version="15.0.26105-RC3" targetFramework="net45" />
+  <package id="Microsoft.VisualStudio.TestWindow.Interfaces" version="11.0.61030" targetFramework="net45" />
+  <package id="Microsoft.TestPlatform.ObjectModel" version="15.0.0" targetFramework="net45" />
 </packages>
