--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,7 +6,7 @@ version: 3.0.{build}
 #- Windows Server 2012 R2 # This has Dev 12.
 #- Visual Studio 2017 RC # This has Dev 14.
 image:
-- Visual Studio 2017 RC
+- Visual Studio 2017
 
 configuration: Release
 platform: Any CPU
