--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,6 +21,9 @@ environment:
 before_build:
   - nuget restore
 
+install:
+  - "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\Common7\Tools\VsDevCmd.bat"
+
 build:
   parallel: true
   verbosity: minimal
