--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,7 +22,7 @@ before_build:
   - nuget restore
 
 install:
-  - "C:\\Program Files (x86)\\Microsoft Visual Studio\\2017\\Community\\Common7\\Tools\\VsDevCmd.bat"
+  - "\"C:\\Program Files (x86)\\Microsoft Visual Studio\\2017\\Community\\Common7\\Tools\\VsDevCmd.bat\""
 
 build:
   parallel: true
