--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,43 +2,38 @@ version: 3.0.{build}
 # The above also controls the VSIX Version. For any dlls which are intended to be referenced from
 # 3rd parties, eg, any contract DLLs, those have their own AssemblyInfo/AssemblyVersioning.
 
-#os:
+os:
 #- Windows Server 2012 R2 # This has Dev 12.
-#- Visual Studio 2017 RC # This has Dev 14.
-image:
-- Visual Studio 2017
+- Visual Studio 2015 RC # This has Dev 14.
+
 
 configuration: Release
 platform: Any CPU
 
 environment:
   signing_code:
-    secure: fDI39OFs8s8fqvp08JPiOQ==
+    secure: j866O0PgCqwsA8OLhNTgnVbKhuNiu5pPWncpyhTe6xs=
   matrix:
- # - VisualStudioVersion: 14.0
-    - VisualStudioVersion: 15.0
+  - VisualStudioVersion: 12.0
+  - VisualStudioVersion: 14.0
 
 before_build:
   - nuget restore
-  - cmd: "\"C:\\Program Files (x86)\\Microsoft Visual Studio\\2017\\Community\\Common7\\Tools\\VsDevCmd.bat\""
 
 build:
   parallel: true
   verbosity: minimal
 
 artifacts:
-#  - path: bin\VS140\Release\PowerShellTools.14.0.vsix
-  #  name: PowerShellTools.14.0.vsix
-  #- path: bin\VS140\Release\PDB
-  - path: bin\VS150\Release\PowerShellTools.15.0.vsix
-    name: PowerShellTools.15.0.vsix
-  - path: bin\VS150\Release\PDB
+  - path: bin\VS120\Release\PowerShellTools.12.0.vsix
+    name: PowerShellTools.12.0.vsix
+  - path: bin\VS140\Release\PowerShellTools.14.0.vsix
+    name: PowerShellTools.14.0.vsix
+  - path: bin\VS140\Release\PDB
+  - path: bin\VS120\Release\PDB
 assembly_info:
   patch: true
   file: Build\AssemblyVersion.cs
   assembly_version: '{version}'
   assembly_file_version: '{version}'
   assembly_informational_version: '{version}'
-
-#BUG: Tests are failing to run at all in new AppVeyor instance. 
-test: off
