--- a/appveyor.14..yml
+++ b/appveyor.14..yml
@@ -4,7 +4,7 @@ version: 3.0.{build}
 
 os:
 #- Windows Server 2012 R2 # This has Dev 12.
-- Visual Studio 2015 RC # This has Dev 14.
+- Visual Studio 2015 # This has Dev 14.
 
 
 configuration: Release
