--- a/PowerShellTools.Explorer/PowerShellTools.Explorer.csproj
+++ b/PowerShellTools.Explorer/PowerShellTools.Explorer.csproj
@@ -145,7 +145,7 @@
     <Reference Include="Microsoft.VisualStudio.TextManager.Interop.8.0">
       <Private>False</Private>
     </Reference>
-    <Reference Include="Microsoft.VisualStudio.Shell.15.0" />
+    <Reference Include="Microsoft.VisualStudio.Shell.$(VSTarget)"/>
     <Reference Include="Microsoft.VisualStudio.Shell.Immutable.10.0">
       <Private>False</Private>
     </Reference>
