--- a/PowerShellTools/packages.config
+++ b/PowerShellTools/packages.config
@@ -5,6 +5,8 @@
   <package id="Microsoft.Tpl.Dataflow" version="4.5.24" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Composition" version="15.0.70" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.ProjectSystem" version="15.0.743" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.ProjectSystem.SDK" version="15.0.743" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.ProjectSystem.SDK.Tools" version="15.0.743" targetFramework="net46" developmentDependency="true" />
   <package id="Microsoft.VisualStudio.SDK.VsixSuppression" version="14.1.32" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.TestWindow.Interfaces" version="11.0.61030" targetFramework="net45" />
   <package id="Microsoft.VisualStudio.Threading" version="15.0.240" targetFramework="net46" />
