Udpated test adapter. Broken tests.

--- a/PowerShellTools.TestAdapter/PowerShellTools.TestAdapter.csproj
+++ b/PowerShellTools.TestAdapter/PowerShellTools.TestAdapter.csproj
@@ -152,6 +152,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="TestAdapterHost.cs" />
+    <Compile Include="TestCaseSet.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx">
