Updates for inbox build.

--- a/appveyor.15.yml
+++ b/appveyor.15.yml
@@ -13,6 +13,9 @@ environment:
     secure: fDI39OFs8s8fqvp08JPiOQ==
   matrix:
     - VisualStudioVersion: 15.0
+      inbox: false
+    - VisualStudioVersion: 15.0
+      inbox: true
 
 before_build:
   - copy packages.15.config packages.config
@@ -26,6 +29,8 @@ build:
 artifacts:
   - path: bin\VS150\Release\PowerShellTools.15.0.vsix
     name: PowerShellTools.15.0.vsix
+  - path: bin\VS150\Release\PowerShellTools.VS2017.json
+    name: PowerShellTools.VS2017.json
   - path: bin\VS150\Release\PDB
 assembly_info:
   patch: true
