--- a/PowerShellTools/PowerShellTools.csproj
+++ b/PowerShellTools/PowerShellTools.csproj
@@ -41,7 +41,7 @@
         <UpgradeBackupLocation>
         </UpgradeBackupLocation>
         <OldToolsVersion>4.0</OldToolsVersion>
-        <IsProductComponent Condition=" '$(IsProductComponent)' == '' ">$(inbox)</IsProductComponent>
+        <IsProductComponent Condition=" '$(IsProductComponent)' == '' ">$(InboxBuild)</IsProductComponent>
         <!--
           IsProductComponent is only needed when inserting the VSIX into VS 2017 installer.
           It will make the build process to generate a json file which can be used to create a component manifest file.
