--- a/PowerShellTools/Project/PowerShellTools.targets
+++ b/PowerShellTools/Project/PowerShellTools.targets
@@ -1,16 +1,12 @@
 ﻿<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Target Name="ModuleManifest">
-    <Exec Command="powershell.exe -Command { New-ModuleManifest  -Path '$(Path)' -NestedModules '$(NestedModules)' - } " />
-  </Target>
   <Target Name="PreBuild">
-    <Exec Command="powershell.exe -ExecutionPolicy $(BuildEventExecutionPolicy) -Command { $(PreBuild) } " />
+    <Exec Command="powershell.exe -Command  &quot;&amp;{ $(PreBuild) } &quot; " />
   </Target>
   <Target Name="PostBuild">
-    <Exec Command="powershell.exe -ExecutionPolicy $(BuildEventExecutionPolicy) -Command { $(PostBuild) } " />
+    <Exec Command="powershell.exe -Command &quot;&amp;{ $(PostBuild) } &quot; " />
   </Target>
   <Target Name="Build">
     <CallTarget Targets="PreBuild" Condition="'$(PreBuild)' != ''" />
-    <CallTarget Targets="ModuleManifest" Condition="'$(GenerateModuleManifest)' == 'True'" />
     <CallTarget Targets="PostBuild" Condition="'$(PostBuild)' != ''" />
   </Target>
 </Project>
